--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,3 +34,9 @@ android {
         }
     }
 }
+
+
+dependencies {
+    implementation "com.google.android.material:material:1.3.0"
+    implementation files('libs\\libDaumMapAndroid.jar')
+}
